# kafka-controller

./: .gitignore  LICENSE  README.md  agent.md
backend-server/: pyproject.toml  requirements.txt  server.py
backend-server/app/: config.py
backend-server/app/api/: cluster.py  consumer_groups.py  dependencies.py  group_monitoring.py  messages.py  metrics.py  monitoring.py  topics.py  web_socket.py
backend-server/app/api/routers/: __init__.py  brokers.py  clusters.py  consumer_groups.py  topics.py
backend-server/app/core/: config.py  errors.py  exceptions.py  security.py
backend-server/app/domain/models/: cluster.py  consumer_group.py  metrics.py  topic.py
backend-server/app/domain/services/: cluster_service.py  consumer_service.py  metric_service.py  topic_service.py
backend-server/app/infra/kafka/: admin.py  lag.py
backend-server/app/models/: consumers.py  kpis.py  messages.py  monitoring.py  topics.py  ws_events.py
backend-server/app/services/: group_monitor.py  jmx_service.py  kafka_service.py  store.py
backend-server/app/ws/: manager.py
demo/kafka-user-example/: consumer.py  consumer_long_run_thread_safe.py  kafka_data_fetcher.py  producer.py  producer.py.backup
web-ui/: package-lock.json  package.json
web-ui/src/: App.js  index.js  theme.js
web-ui/src/api/: client.js  cluster.js  groups.js  messages.js  monitoring.js  topics.js
web-ui/src/components/: AppShell.jsx  AutoRefreshSwitch.jsx  ConfirmDialog.jsx  GroupLagAlerts.jsx  GroupLagKpis.jsx  GroupLagTable.jsx  GroupLagTrends.jsx  HeatStrip.jsx  KpiStat.jsx  Sidebar.jsx  TopBar.jsx
(+17 files in other folders)
