[project]
name = "kafka_admin_backend"
version = "0.1.0"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "kafka-python>=2.2.2",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "python-dotenv>=1.0.1",
  "jmxquery>=0.9.0"
]

[tool.uvicorn]
host = "0.0.0.0"
port = 8000
reload = true